PROJECT (HELLO)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
MESSAGE(STATUS "This is binary dir " ${HELLO_BINARY_DIR})
MESSAGE(STATUS "This is source dir " ${HELLO_SOURCE_DIR})
SET(SRC_LIST main.cpp test.cpp)
ADD_EXECUTABLE(main ${SRC_LIST})


#AUX_SOURCE_DIRECTORY(. DIR_SRCS)
#ADD_EXECUTABLE(main ${DIR_SRCS})
