PROJECT(demo3)
cmake_minimum_required(VERSION 2.8)
SET(CMAKE_SOURCE_DIR .)
SET(CMAKE_MODULE_PATH ${CMAKE_ROOT}/third_part ${CMAKE_SOURCE_DIR}/third_part)
AUX_SOURCE_DIRECTORY(. DIR_SRCS)


ADD_EXECUTABLE(demo3, ${DIR_SRCS})

#INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/third_part/inc)
#link_directories(${CMAKE_CURRENT_SOURCE_DIR}/third_part/lib)
#LINK_LIBRARIES(test1)
#TARGET_LINK_LIBRARIES(demo3 third_part/lib/llibtest1.a)

if (1)
FIND_PACKAGE(libtest1 REQUIRED)
MARK_AS_ADVANCED(
LIBTEST_CXX_INCLUDE_DIR
LIBTEST_CXX_LIBRARIES
)


MESSAGE(STATUS ${LIBTEST_CXX_INCLUDE_DIR})
MESSAGE(STATUS "found :")
MESSAGE(STATUS ${LIBTEST_CXX_LIBRARIES})

IF (LIBTEST_CXX_INCLUDE_DIR and LIBTEST_CXX_LIBRARIES)
	MESSAGE(STATUS "found libtest")
	INCLUDE_DIRECTORIES(${LIBTEST_CXX_INCLUDE_DIR})
	TARGET_LINK_LIBRARIES(demo3 ${LIBTEST_CXX_LIBRARIES})
ENDIF (LIBTEST_CXX_INCLUDE_DIR and LIBTEST_CXX_LIBRARIES)
endif (1)
