FIND_PACKAGE(THREAD_DB REQUIRED)
MARK_AS_ADVANCED(
THREAD_DB_INCLUDE_DIR
THREAD_DB_LIBRARY
)
MESSAGE(STATUS ${THREAD_DB_INCLUDE_DIR}, ${THREAD_DB_LIBRARY})
SET(DIR_SRCS
    main.cpp)
ADD_EXECUTABLE(sample ${DIR_SRCS})
TARGET_LINK_LIBRARIES(sample hello)

INSTALL(TARGETS sample RUNTIME DESTINATION bin)

